# FastDedup

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pixi.toml
benchmark/: benchmark.sh  plotit.py  start_bench.sh
rapport/: PE.mmd  SE.mmd  rapport.typ  works.bib
src/: cli.rs  hasher.rs  lib.rs  main.rs  processor.rs  utils.rs
tests/: cli.rs
