[package]
name = "fastdedup"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
authors = [
    "Raphaël Ribes <raphael.ribes@etu.umontpellier.fr>",
    "Céline Mandier <celine.mandier@umontpellier.fr>"
]
description = "A fast and memory-efficient FASTX PCR deduplication tool"
readme = "README.md"
license = "MIT"
repository = "https://github.com/RaphaelRibes/FastDedup"
keywords = ["bioinformatics", "fastq", "fasta", "deduplication", "pcr"]
categories = ["science", "command-line-utilities", "science::bioinformatics", "science::bioinformatics::genomics", "science::bioinformatics::sequence-analysis"]
documentation = "https://docs.rs/fastdedup"
exclude = [
    "fdedup.sif",
    "fdedup.def",
    "*.tar.gz",
    ".idea/",
    ".pixi/",
    "pixi.lock",
    "pixi.toml",
    "imgs/",
    "demo.sh",
    ".github/"
]

[[bin]]
name = "fdedup"
path = "src/main.rs"

[dependencies]
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
flate2 = { version = "1.1.9", features = ["zlib-ng"], default-features = false }
rustc-hash = "2.1.1"
needletail = "0.6.3"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
